Created an app instance for each section of the project

--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
         <button class="headerButton">Projects</button>
         <button class="headerButton">Skills</button>
         <button class="headerButton">About Me</button>
+        <p>{{headerText}}</p>
       </div>
     </header>
-    <section id="user-goal">
-      <h2>My Course Goal</h2>
-      <ul id="itemList">
-        <li>{{ listItemText }}</li>
-      </ul>
-      <p></p>
+    <section id="projects">
+      <h2>{{projectText}}</h2>
+    </section>
+    <section id="skills">
+      <h2>{{skillsText}}</h2>
+    </section>
+    <section id="about">
+      <h2>{{aboutText}}</h2>
+    </section>
+    <section id="contact">
+      <h2>{{contactText}}</h2>
     </section>
   </body>
 </html>
