Added a click listener to the Sean McGillis button in the header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="headerContainer">
-        <button class="logoButton">Sean McGillis</button>
+        <button @click="clickedSean" class="logoButton">Sean McGillis</button>
         <button class="headerButton">Projects</button>
         <button class="headerButton">Skills</button>
         <button class="headerButton">About Me</button>
